add link to github

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           Each row on the timeline represents the time during which the anime was broadcasted.
           Add an anime by typing its title, for example, Naruto or One Piece.
           You can also load a set of examples by clicking on 'Load Examples'.
+          The code is availabe on <a target="_blank" href="https://github.com/pheyvaer/anime-timeline">GitHub</a>.
         </p>
         <div>
             <form id="search">
